<resources>
    <string name="app_name">JLLibrary</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>

    <string name="menu_add_book">Add Book</string>
    <string name="menu_issue_book">Issue Book</string>
    <string name="menu_return_book">Return Book</string>
    <string name="menu_search_book">Search Book</string>
    <string name="menu_list_book">List Book</string>
    <string name="menu_logout">Logout</string>

    <string name="open_nav">Open menu</string>
    <string name="close_nav">Close menu</string>
    <string name="register_title">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title">Book Title</string>
    <string name="isbn">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="quantity_in_stock">Quantity in Stock</string>
    <string name="price">Price</string>
    <string name="add_book">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="issue_book">Issue Book</string>
    <string name="add_book_title">Add Book</string>
    <string name="book_id">Book ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="quantity_to_be_issued">Quantity to be issued</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="submit">Submit</string>
    <string name="return_book">Return Book</string>
    <string name="issue_id">Issue ID</string>
    <string name="quantity_of_returned">Quantity of returned</string>
    <string name="date_of_return">Date of Return</string>
    <string name="search_book">Search Book</string>
</resources>